--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,9 +4,8 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
+  schedule:
+    - cron: '0 2 * * *' # Runs at 2 AM every day
 
 jobs:
   test:
@@ -24,8 +23,17 @@ jobs:
     - name: Install dependencies
       run: npm install
 
-    - name: Install Playwright browsers
-      run: npx playwright install
-
     - name: Run Playwright tests
       run: npx playwright test
+
+    - name: Upload Playwright report
+      uses: actions/upload-artifact@v2
+      with:
+        name: playwright-report
+        path: playwright-report
+
+    - name: Upload Playwright HTML report as GitHub Pages artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: playwright-html-report
+        path: test-report
