--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,9 @@ jobs:
           name: Install dependencies
           command: npm install
       - run:
+          name: Install Playwright browsers
+          command: npx playwright install
+      - run:
           name: Run Playwright tests
           command: npx playwright test
       - store_artifacts:
